--- a/src/components/app-root/app-root.css
+++ b/src/components/app-root/app-root.css
@@ -1,5 +1,5 @@
 header {
-  background: #5851ff;
+  background: #ff6a2b;
   color: white;
   height: 56px;
   display: flex;
@@ -13,3 +13,35 @@ h1 {
   color: #fff;
   padding: 0 12px;
 }
+
+app-root div {
+  display: grid;
+
+  grid-template-rows: auto 1fr;
+  grid-template-columns: auto;
+
+  grid-template-areas:
+    "header"
+    "main";
+
+  position: absolute;
+  top: 0px;
+  bottom: 0px;
+  right: 0px;
+  left: 0px;
+}
+
+app-root div header {
+  grid-area: header;
+}
+
+app-root div main {
+  grid-area: main;
+  position: relative;
+  overflow: scroll;
+}
+
+app-root div main > div {
+  height: 100%;
+}
+
