--- a/src/app.css
+++ b/src/app.css
@@ -8,13 +8,13 @@
   Any global CSS variables should also be applied here.
 */
 
-@import 'variables.css';
+@import "variables.css";
 
 body {
   margin: 0px;
   padding: 0px;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif,
-    'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial,
+    sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
 .control-container {
@@ -25,7 +25,7 @@ body {
 }
 
 .control-container.button {
-  font-family: 'Courier New', Courier, monospace;
+  font-family: "Courier New", Courier, monospace;
 }
 
 .control-container > *:first-child {
