--- a/src/components/design/design-surface.css
+++ b/src/components/design/design-surface.css
@@ -1,17 +1,15 @@
-design-editor {
+design-surface {
   user-select: none;
   --squareColor: rgba(0, 0, 0, 0.1);
   --squareSize: 8px;
   --squareSizeTimes2: 16px;
 
   background-color: white;
-  background-image: linear-gradient(
-      45deg,
+  background-image: linear-gradient(45deg,
       var(--squareColor) 25%,
       transparent 25%,
       transparent 75%,
-      var(--squareColor) 75%
-    ),
+      var(--squareColor) 75%),
     linear-gradient(45deg, var(--squareColor) 25%, transparent 25%, transparent 75%, var(--squareColor) 75%);
   background-position: 0 0, var(--squareSize) var(--squareSize);
   background-size: var(--squareSizeTimes2) var(--squareSizeTimes2);
@@ -26,7 +24,7 @@ design-editor {
 }
 
 @media screen and (max-width: 810px) {
-  design-editor {
+  design-surface {
     right: calc(-800px + 100%);
   }
 }
