--- a/src/components/design/property-panel.css
+++ b/src/components/design/property-panel.css
@@ -1,6 +1,6 @@
 property-panel .name {
   height: 1.1em;
-  font-size: .8em;
+  font-size: 0.8em;
   width: auto;
   display: inline-block;
   overflow: hidden;
