--- a/src/components/design/design-surface.css
+++ b/src/components/design/design-surface.css
@@ -5,11 +5,13 @@ design-surface {
   --squareSizeTimes2: 16px;
 
   background-color: white;
-  background-image: linear-gradient(45deg,
+  background-image: linear-gradient(
+      45deg,
       var(--squareColor) 25%,
       transparent 25%,
       transparent 75%,
-      var(--squareColor) 75%),
+      var(--squareColor) 75%
+    ),
     linear-gradient(45deg, var(--squareColor) 25%, transparent 25%, transparent 75%, var(--squareColor) 75%);
   background-position: 0 0, var(--squareSize) var(--squareSize);
   background-size: var(--squareSizeTimes2) var(--squareSizeTimes2);
