--- a/src/app.css
+++ b/src/app.css
@@ -11,15 +11,15 @@
 @import 'variables.css';
 
 body {
-  margin: 0px;
-  padding: 0px;
+  margin: 0;
+  padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji',
     'Segoe UI Emoji', 'Segoe UI Symbol';
 }
 
 .control-container {
-  padding: 0px;
-  margin: 0px;
+  padding: 0;
+  margin: 0;
   display: inline-block;
   position: absolute;
 }
@@ -30,26 +30,23 @@ body {
 
 .control-container > *:first-child {
   position: absolute;
-  left: 0px;
-  right: 0px;
-  top: 0px;
-  bottom: 0px;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
   display: block;
 
   width: 100%;
 }
 
 control-container button {
-  margin: 0px;
-  padding: 0px;
-
-  border: none;
   margin: 0;
   padding: 0;
+
   overflow: hidden;
 
   background: rgb(224, 96, 37);
-  border-radius: 0px;
+  border-radius: 0;
 
   /* inherit font & color from ancestor */
   color: inherit;
