--- a/v3/src/Views/DesignCanvas.css
+++ b/v3/src/Views/DesignCanvas.css
@@ -1,4 +1,4 @@
-design-surface {
+.design-canvas {
   user-select: none;
   --squareColor: rgba(0, 0, 0, 0.1);
   --squareSize: 8px;
@@ -6,19 +6,19 @@ design-surface {
 
   background-color: white;
   background-image: linear-gradient(
-      45deg,
-      var(--squareColor) 25%,
-      transparent 25%,
-      transparent 75%,
-      var(--squareColor) 75%
-    ),
-    linear-gradient(45deg, var(--squareColor) 25%, transparent 25%, transparent 75%, var(--squareColor) 75%);
+    45deg,
+    var(--squareColor) 25%,
+    transparent 25%,
+    transparent 75%,
+    var(--squareColor) 75%
+  ),
+  linear-gradient(45deg, var(--squareColor) 25%, transparent 25%, transparent 75%, var(--squareColor) 75%);
   background-position: 0 0, var(--squareSize) var(--squareSize);
   background-size: var(--squareSizeTimes2) var(--squareSizeTimes2);
 
   position: absolute;
-  top: 0px;
-  bottom: 0px;
+  top: 0;
+  bottom: 0;
   right: calc(50% - 400px);
 
   width: 800px;
@@ -26,7 +26,7 @@ design-surface {
 }
 
 @media screen and (max-width: 810px) {
-  design-surface {
+  .design-canvas  {
     right: calc(-800px + 100%);
   }
 }
