Re-enable resizing/selection of controls
Completes "Ability to edit/move controls" of #33

--- a/v3/src/Views/EditableControl.css
+++ b/v3/src/Views/EditableControl.css
@@ -10,7 +10,7 @@
   font-family: 'Courier New', Courier, monospace;
 }
 
-.editable-control > *:first-child {
+.editable-control > *[fe-role]{
   position: absolute;
   left: 0;
   right: 0;
@@ -35,4 +35,106 @@
 
   border: 2px solid rgb(61, 110, 201);
   box-sizing: border-box;
+}
+
+.control-editor {
+  position: absolute;
+  left: -1px;
+  top: -1px;
+  bottom: -1px;
+  right: -1px;
+  background-color: #33000000;
+
+  border: 1px dashed black;
+  z-index: 10000;
+
+  cursor: move;
+}
+
+.drag-handle {
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 10010;
+  position: absolute;
+
+  --handle-offset: -3px;
+  --handle-size: 6px;
+}
+
+.drag-handle-nw,
+.drag-handle-ne,
+.drag-handle-se,
+.drag-handle-sw {
+  width: var(--handle-size);
+  height: var(--handle-size);
+}
+
+.drag-handle-nw {
+  left: var(--handle-offset);
+  top: var(--handle-offset);
+
+  cursor: nw-resize;
+}
+
+.drag-handle-ne {
+  right: var(--handle-offset);
+  top: var(--handle-offset);
+
+  cursor: ne-resize;
+}
+
+.drag-handle-se {
+  right: var(--handle-offset);
+  bottom: var(--handle-offset);
+
+  cursor: se-resize;
+}
+
+.drag-handle-sw {
+  left: var(--handle-offset);
+  bottom: var(--handle-offset);
+
+  cursor: sw-resize;
+}
+
+.drag-handle-east,
+.drag-handle-west,
+.drag-handle-north,
+.drag-handle-south {
+  background: rgba(0, 0, 0, 0);
+}
+
+.drag-handle-north {
+  right: var(--handle-offset);
+  top: var(--handle-offset);
+  left: var(--handle-offset);
+  height: var(--handle-size);
+
+  cursor: n-resize;
+}
+
+.drag-handle-east {
+  right: var(--handle-offset);
+  top: var(--handle-offset);
+  bottom: var(--handle-offset);
+  width: var(--handle-size);
+
+  cursor: e-resize;
+}
+
+.drag-handle-west {
+  left: var(--handle-offset);
+  top: var(--handle-offset);
+  bottom: var(--handle-offset);
+  width: var(--handle-size);
+
+  cursor: w-resize;
+}
+
+.drag-handle-south {
+  right: var(--handle-offset);
+  bottom: var(--handle-offset);
+  left: var(--handle-offset);
+  height: var(--handle-size);
+
+  cursor: s-resize;
 }
